--- a/index.html
+++ b/index.html
@@ -98,11 +98,15 @@
     </section>
     <section id="Contact">
       <div class="contact">
-        <h1>Contact Us</h1>
+        <div class="C1">
+          <h1>Contact Us</h1>
 
-        <b>Email: </b> dave.nurcahyo@jacschool.sch.id <br /><b>Telp:</b> 081
-        13918 2897 <br />
-        <b>Location:</b> Jln. Puncak Permai no. 12
+          <b>Email: </b> dave.nurcahyo@jacschool.sch.id <br /><b>Telp:</b> 081
+          13918 2897 <br />
+          <b>Location:</b> Jln. Puncak Permai no. 12 <br />
+          <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />Created
+          by: Dave XII IPA &copy;
+        </div>
       </div>
       <!-- <div class="tes"></div> -->
     </section>
