--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section id="Navbar">
       <div class="n1">
         <div class="n3">
-          <img src="../IMG/Kopi_Indah-removebg-preview.png" alt="" /> KOPI INDAH
+          <img src="IMG/Kopi_Indah-removebg-preview.png" alt="" /> KOPI INDAH
         </div>
         <div class="n2">
           <a href="">Home</a><a href="#About">About</a
@@ -20,7 +20,7 @@
     </section>
     <section id="Home">
       <div class="h1">
-        <img src="../IMG/Kopi_shop.jpg" alt="" />
+        <img src="IMG/Kopi_shop.jpg" alt="" />
         <div class="h2">
           <h1 style="text-align: center">KOPI INDAH</h1>
           <p>
@@ -48,51 +48,51 @@
             premium Tazo®
           </p>
         </div>
-        <div class="a3"><img src="../IMG/Cafe.jpg" alt="" /></div>
+        <div class="a3"><img src="IMG/Cafe.jpg" alt="" /></div>
       </div>
     </section>
     <section id="Product">
       <h1>Product</h1>
       <div class="pu">
-        <a href="#p1"><img src="../IMG/Americano.jpg" alt="" /></a>
-        <a href="#p2"><img src="../IMG/Cappucino.jpg" alt="" /></a>
-        <a href="#p3"><img src="../IMG/Mocha.jpg" alt="" /></a>
+        <a href="#p1"><img src="IMG/Americano.jpg" alt="" /></a>
+        <a href="#p2"><img src="IMG/Cappucino.jpg" alt="" /></a>
+        <a href="#p3"><img src="IMG/Mocha.jpg" alt="" /></a>
       </div>
 
       <div class="hilang" id="p1">
         <div class="c1">
-          <a href="#Product"><img src="../IMG/close.svg" alt="" /></a>
+          <a href="#Product"><img src="IMG/close.svg" alt="" /></a>
         </div>
         <div class="A1">
-          <a href="#p3"><img src="../IMG/skip-back.svg" alt="" /></a>
+          <a href="#p3"><img src="IMG/skip-back.svg" alt="" /></a>
         </div>
-        <img src="../IMG/Americano.jpg" class="gbr" />
+        <img src="IMG/Americano.jpg" class="gbr" />
         <div class="A2">
-          <a href="#p2"><img src="../IMG/skip-forward.svg" alt="" /></a>
+          <a href="#p2"><img src="IMG/skip-forward.svg" alt="" /></a>
         </div>
       </div>
       <div class="hilang" id="p2">
         <div class="c1">
-          <a href="#Product"><img src="../IMG/close.svg" alt="" /></a>
+          <a href="#Product"><img src="IMG/close.svg" alt="" /></a>
         </div>
         <div class="A1">
-          <a href="#p1"><img src="../IMG/skip-back.svg" alt="" /></a>
+          <a href="#p1"><img src="IMG/skip-back.svg" alt="" /></a>
         </div>
-        <img src="../IMG/Cappucino.jpg" class="gbr" />
+        <img src="IMG/Cappucino.jpg" class="gbr" />
         <div class="A2">
-          <a href="#p3"><img src="../IMG/skip-forward.svg" alt="" /></a>
+          <a href="#p3"><img src="IMG/skip-forward.svg" alt="" /></a>
         </div>
       </div>
       <div class="hilang" id="p3">
         <div class="c1">
-          <a href="#Product"><img src="../IMG/close.svg" alt="" /></a>
+          <a href="#Product"><img src="IMG/close.svg" alt="" /></a>
         </div>
         <div class="A1">
-          <a href="#p2"><img src="../IMG/skip-back.svg" alt="" /></a>
+          <a href="#p2"><img src="IMG/skip-back.svg" alt="" /></a>
         </div>
-        <img src="../IMG/Mocha.jpg" class="gbr" />
+        <img src="IMG/Mocha.jpg" class="gbr" />
         <div class="A2">
-          <a href="#p1"><img src="../IMG/skip-forward.svg" alt="" /></a>
+          <a href="#p1"><img src="IMG/skip-forward.svg" alt="" /></a>
         </div>
       </div>
     </section>
